@@ -21,6 +21,7 @@ environments.
 * Fixed example1 to accord with var name changes.
 * Fixed a missed var in rrd.DataSource, a test in graph, and updated example2.
 * Updated example3.
+* Updated example4.
 
 2006.01.29
 
